# solana-simple-randomness-example

./: .gitignore  Anchor.toml  Cargo.toml  Dockerfile  Makefile  README.md  measurement.txt  package.json  pnpm-lock.yaml  sample.env
lottery-function/: Cargo.toml
lottery-function/src/: lib.rs  main.rs  params.rs
programs/01_super-simple-randomness/: Cargo.toml
programs/01_super-simple-randomness/src/: lib.rs
programs/02_switchboard-randomness-callback/: Cargo.toml
programs/02_switchboard-randomness-callback/src/: lib.rs
programs/03_scheduled-lottery-request/: Cargo.toml
programs/03_scheduled-lottery-request/src/: lib.rs
programs/super-simple-randomness/src/: lib.rs
programs/switchboard-randomness-callback/src/: lib.rs
scripts/: anchor.ts  callback-flip.ts  meter.ts  request.ts  simple-flip.ts  update-measurement.ts  utils.ts
src/: lib.rs
switchboard-function/: Cargo.toml  Dockerfile
switchboard-function/src/: main.rs  params.rs  secret.rs
tests/: scheduled-lottery-request.test.ts  solana-simple-randomness.ts  super-simple-randomness.test.ts  switchboard-callback.test.ts  switchboard-randomness-callback.ts  utils.ts
