[package]
name = "simple-randomness-function"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple-randomness-function"
path = "src/main.rs"

[dependencies]
tokio = "^1"
futures = "0.3"
switchboard-solana = { version = "=0.29.71", features = ["macros"] }
bytemuck = "1.13"

# Secrets Dependencies
aes-gcm = "0.10.3"
base64 = "*"
rand = { version = "0.8.5" }
reqwest = { version = "0.11", features = ["json"] }
rsa = { version = "0.5.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "^1" }
