[package]
name = "simple-randomness-function"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple-randomness-function"
path = "src/main.rs"

[dependencies]
tokio = "^1"
futures = "0.3"
jessupjn-sb-sol = { version = "=0.0.0-beta.0", features = [
    "macros",
    "secrets",
] }
bytemuck = "1.13"
