[package]
name = "switchboard-randomness-callback"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "switchboard_randomness_callback"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# switchboard-solana = { version = "0.28.30", path = "../../../sbv3/rust/switchboard-solana" }
switchboard-solana = "0.28.30"
