[package]
name = "scheduled-lottery-request"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "scheduled_lottery_request"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-spl = "0.28.0"
# switchboard-solana = { version = "0.28.29", path = "../../../sbv3/rust/switchboard-solana" }
switchboard-solana = "0.28.29"
